--- a/frontend/src/assets/custom.css
+++ b/frontend/src/assets/custom.css
@@ -7,65 +7,77 @@ body {
 
 /* Login/Register Form */
 .form-wrapper {
-    position: fixed;
-    top: 300px;
-    right: 20px;
-    transform: translateY(-50%);
-    width: 100%;
-    max-width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  position: fixed;
+  top: 350px;
+  right: 20px;
+  transform: translateY(-50%);
+  width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  }
+.formAuth {
+  border: 1px solid #ddd;
+  padding: 20px;
+  margin: 10px 0;
+  background-color: #ffffff;
+  width: 100%;
+  max-width: 300px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   }
   
-  form {
-    border: 1px solid #ddd;
-    padding: 20px;
-    margin: 10px 0;
-    background-color: #ffffff;
-    width: 100%;
-    max-width: 300px;
-    box-sizing: border-box;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+.buttonAuth {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: rgb(127, 120, 120); /* This was good: #42b983 */
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
   }
-  
-  button {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #42b983;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  button:hover {
+.buttonAuth:hover {
     background-color: #369e6f;
   }
   
-  h2 {
-    margin-bottom: 15px;
-    font-family: 'Roboto', sans-serif;
-    color: #333333;
-    font-size: 1.5em;
-    text-align: center;
-  }
+.h2Auth {
+  margin-bottom: 15px;
+  font-family: 'Roboto', sans-serif;
+  color: black; /* Greenish color maybe, or keep blue idk */
+  font-size: 2em;
+  text-align: center;
+  font-weight: 900;
+}
   
-  input {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
   
-  label {
-    font-family: 'Roboto', sans-serif;
-    color: #555555;
-    margin-bottom: 5px;
-  }
-  
+
+input {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+label {
+  font-family: 'Roboto', sans-serif;
+  color: #555555;
+  margin-bottom: 5px;
+}
+
+
+
+.highlightText{
+    color: blue;
+    cursor: pointer;
+    
+}
+.highlightText:hover{
+    color: lightskyblue;
+}
