--- a/frontend/src/assets/custom.css
+++ b/frontend/src/assets/custom.css
@@ -83,7 +83,7 @@ label {
   .form-wrapper {
     width: 100%;
     margin-top: 20px;
-    top: 59%;
+    top: 486px;
     left: 50%;
     transform: translate(-50%, -50%);
   }
